--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.3.0",
+    "@prisma/client": "^6.3.1",
+    "bcryptjs": "^2.4.3",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
+    "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
